[gd_scene load_steps=17 format=3 uid="uid://cdw7dqbun7qpx"]

[ext_resource type="Script" path="res://player.gd" id="1_mqqx7"]
[ext_resource type="Script" path="res://hand.gd" id="2_hwm8h"]
[ext_resource type="PackedScene" uid="uid://bcopyojr1w1ks" path="res://glock_1.tscn" id="2_yx1rh"]
[ext_resource type="Script" path="res://weapon.gd" id="3_xb2eu"]
[ext_resource type="PackedScene" uid="uid://cdub867e6d0y4" path="res://flash_light.tscn" id="4_qpu7t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k4rnq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6mrq5"]

[sub_resource type="Animation" id="Animation_j11l6"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(5.37986e-19, 5.37986e-19, 1.50439e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/weapon/glock1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.11908, -0.193089, -1.17752)]
}

[sub_resource type="Animation" id="Animation_l6fyj"]
resource_name = "Relode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand/weapon/glock1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.11908, -0.193089, -1.17752), Vector3(0.119066, -1.29599, -1.17195), Vector3(0.11908, -0.193089, -1.17752)]
}

[sub_resource type="Animation" id="Animation_syswq"]
resource_name = "idk"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(5.37986e-19, 5.37986e-19, 1.50439e-05)]
}

[sub_resource type="Animation" id="Animation_grvrt"]
resource_name = "runging"
length = 0.8
loop_mode = 2

[sub_resource type="Animation" id="Animation_rc2bq"]
resource_name = "walking"
length = 0.6
loop_mode = 2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.48787e-16, 3.48787e-16, -0.0174533), Vector3(3.48787e-16, 3.48787e-16, 0.0174533)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08rsc"]
_data = {
"RESET": SubResource("Animation_j11l6"),
"Relode": SubResource("Animation_l6fyj"),
"idk": SubResource("Animation_syswq"),
"runging": SubResource("Animation_grvrt"),
"walking": SubResource("Animation_rc2bq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ew72u"]
animation = &"idk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fs45s"]
animation = &"walking"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_q01l2"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ew72u")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_fs45s")
blend_point_1/pos = 1.0

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_mqqx7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_k4rnq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_6mrq5")

[node name="neck" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="neck"]
transform = Transform3D(1, -1.50439e-05, 5.37986e-19, 1.50439e-05, 1, -5.37986e-19, -5.37978e-19, 5.37994e-19, 1, 0, 0.547266, 0)
keep_aspect = 0
doppler_tracking = 1

[node name="hand" type="Node3D" parent="neck/Camera3D"]
transform = Transform3D(1, 1.27506e-23, -2.07293e-23, -1.21652e-31, 0.999987, -0.00504398, 0, 0.00504398, 0.999987, 0.431425, -0.156948, -0.81427)
script = ExtResource("2_hwm8h")
camera_path = NodePath("..")
default_position = Vector3(0.119, -0.193, -1.178)
ads_position = Vector3(0.173, -0.353, -0.203)

[node name="weapon" type="Node3D" parent="neck/Camera3D/hand"]
transform = Transform3D(1, 7.27596e-12, -2.84082e-14, -3.63798e-12, 1, -3.47989e-10, 1.42098e-14, 3.30187e-10, 1, 0, 0, 0)
script = ExtResource("3_xb2eu")

[node name="glock1" parent="neck/Camera3D/hand/weapon" instance=ExtResource("2_yx1rh")]
transform = Transform3D(-2.32403e-06, -2.2392e-16, -0.642, 2.23921e-16, 0.642, -2.23921e-16, 0.642, -2.23922e-16, -2.32403e-06, 0.11908, -0.193089, -1.17752)

[node name="AnimationPlayer" type="AnimationPlayer" parent="neck/Camera3D/hand"]
root_node = NodePath("../..")
movie_quit_on_finish = true
libraries = {
"": SubResource("AnimationLibrary_08rsc")
}

[node name="AnimationTree" type="AnimationTree" parent="neck/Camera3D/hand"]
tree_root = SubResource("AnimationNodeBlendSpace1D_q01l2")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/blend_position = 0.00154245

[node name="flashflight" type="Node3D" parent="."]

[node name="flash_light" parent="flashflight" instance=ExtResource("4_qpu7t")]
transform = Transform3D(0.359421, 0, 0.0337166, 0, 0.346, 0, -0.0682902, 0, 0.177455, 0.298845, -0.164613, -0.800691)
visible = false

[node name="SpotLight" type="SpotLight3D" parent="flashflight/flash_light"]
transform = Transform3D(2.89017, 0, -9.38363e-08, 0, 2.89017, 0, 2.97806e-08, 0, 3.86448, -0.0228717, -0.00585407, -1.1532)
light_energy = 1.308
spot_range = 4.261
spot_angle = 24.23

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01769, 0)
